<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/mulish_bold"
        android:lineSpacingExtra="-5sp"
        android:text="@string/approval"
        android:textAlignment="center"
        android:textColor="#323F4B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_baseline_arrow_back_ios_24" />
    <TextView
        android:id="@+id/jenisKerusakan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/jenis_kerusakan"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#323F4B"
        android:layout_below="@id/navbar"/>
    <LinearLayout
        android:id="@+id/status"
        android:layout_below="@id/jenisKerusakan"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/elektrika"
            android:textColor="#323F4B"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:letterSpacing="0.15"
            android:lineSpacingExtra="-3sp"
            android:text="@string/status"
            android:textAlignment="textEnd"
            android:textColor="#7B8794"
            android:textSize="11sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/status"
        android:id="@+id/keteranganStatus"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulish"
            android:letterSpacing="0.02"
            android:text="@string/feb_2022_8"
            android:textColor="#7B8794"
            android:textSize="11sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="-3sp"
            android:text="@string/selesai"
            android:textAlignment="textEnd"
            android:textColor="#32B472"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/keteranganStatus"
        android:id="@+id/nomorPesanan"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_pesanan"
            android:textColor="#252B42"
            android:letterSpacing="0.02"
            android:textSize="12sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="-3sp"
            android:text="@string/feb_2022_09"
            android:textAlignment="textEnd"
            android:textColor="#7B8794"
            android:textSize="11sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
    <View
        android:id="@+id/line1"
        android:layout_below="@id/nomorPesanan"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="24sp"
        android:layout_marginTop="14dp"
        android:background="@drawable/line_6"
        />
    <TextView
        android:id="@+id/lokasi"
        android:layout_below="@id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginStart="16sp"
        android:textColor="#323F4B"
        android:letterSpacing="0.01"
        android:fontFamily="@font/mulish_bold"
        android:textStyle="bold"
        android:gravity="top"
        android:textSize="20sp"
        android:text="@string/lokasi"/>
    <TextView
        android:layout_below="@id/lokasi"
        android:id="@+id/keteranganLokasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginTop="13sp"
        android:lineHeight="16sp"
        android:layout_marginEnd="29sp"
        android:text="@string/lorem_ipsum"
        android:textColor="#3D4145"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="-2sp"
        android:textSize="14sp"

        tools:targetApi="p" />
    <View
        android:id="@+id/line2"
        android:layout_below="@id/keteranganLokasi"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="24sp"
        android:layout_marginTop="14dp"
        android:background="@drawable/line_6"
        />
    <TextView
        android:id="@+id/urgensi"
        android:layout_below="@id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urgensi"
        android:layout_marginTop="14dp"
        android:layout_marginStart="16sp"
        android:fontFamily="@font/mulish_bold"
        android:textStyle="bold"
        android:textSize="20sp"
        android:letterSpacing="0.01"
        android:textColor="#323F4B"
        />

    <TextView
        android:id="@+id/statusUrgensi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/urgensi"
        android:layout_marginStart="24sp"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/mulish_bold"
        android:letterSpacing="0.01"
        android:text="@string/rendah"
        android:textColor="#F2A000"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />
    <View
        android:id="@+id/line3"
        android:layout_below="@id/statusUrgensi"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="24sp"
        android:layout_marginTop="21dp"
        android:background="@drawable/line_6"
        />
    <TextView
        android:id="@+id/photo"
        android:layout_below="@id/line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo"
        android:layout_marginTop="23dp"
        android:layout_marginStart="16sp"
        android:fontFamily="@font/mulish_bold"
        android:textStyle="bold"
        android:textSize="20sp"
        android:letterSpacing="0.01"
        android:textColor="#323F4B"
        />
    <TextView
        android:id="@+id/keteranganPhoto"
        android:layout_below="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_photo_perbaikan"
        android:layout_marginTop="13dp"
        android:layout_marginStart="24sp"
        android:fontFamily="@font/mulish"
        android:textStyle="normal"
        android:textSize="14sp"
        android:letterSpacing="0.01"
        android:textColor="#323F4B"
        />
    <ImageView
        android:id="@+id/photoImg"
        android:layout_below="@id/keteranganPhoto"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:minWidth="200dp"
        android:minHeight="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="24sp"
        android:background="@drawable/click"
        android:contentDescription="@string/photoimage" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonChannel"
        android:layout_centerHorizontal="true"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="24dp"
            android:background="@drawable/button_red"
            android:gravity="center"
            android:text="@string/komplain"
            android:textColor="@color/white"

            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="24dp"
            android:background="@drawable/button_green"
            android:gravity="center"
            android:text="@string/terima"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>