<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/mulish_bold"
            android:lineSpacingExtra="-5sp"
            android:text="@string/approval"
            android:textAlignment="center"
            android:textColor="#323F4B"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_back_ios_24" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/mulish_bold"
                    android:text="@string/jenis_kerusakan"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#323F4B"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="14dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mulish_bold"
                            android:text="@string/elektrika"
                            android:textColor="#323F4B"
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="25dp"
                            android:letterSpacing="0.15"
                            android:lineSpacingExtra="-3sp"
                            android:text="@string/status"
                            android:textAlignment="textEnd"
                            android:textColor="#7B8794"
                            android:textSize="11sp"
                            tools:ignore="TextContrastCheck" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mulish"
                            android:letterSpacing="0.02"
                            android:text="@string/feb_2022_8"
                            android:textColor="#7B8794"
                            android:textSize="11sp"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="25dp"
                            android:letterSpacing="0.01"
                            android:lineSpacingExtra="-3sp"
                            android:text="@string/selesai"
                            android:textAlignment="textEnd"
                            android:textColor="#32B472"
                            android:textSize="14sp"
                            tools:ignore="TextContrastCheck" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="3dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_pesanan"
                            android:textColor="#252B42"
                            android:letterSpacing="0.02"
                            android:textSize="12sp"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="25dp"
                            android:letterSpacing="0.02"
                            android:lineSpacingExtra="-3sp"
                            android:text="@string/feb_2022_09"
                            android:textAlignment="textEnd"
                            android:textColor="#7B8794"
                            android:textSize="11sp"
                            tools:ignore="TextContrastCheck" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="24sp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/line_6"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginStart="16sp"
                    android:textColor="#323F4B"
                    android:letterSpacing="0.01"
                    android:fontFamily="@font/mulish_bold"
                    android:textStyle="bold"
                    android:gravity="top"
                    android:textSize="20sp"
                    android:text="@string/lokasi"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24sp"
                    android:layout_marginTop="13sp"
                    android:lineHeight="16sp"
                    android:layout_marginEnd="29sp"
                    android:text="@string/lorem_ipsum"
                    android:textColor="#3D4145"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="-2sp"
                    android:textSize="14sp"

                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="24sp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/line_6"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/urgensi"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="16sp"
                    android:fontFamily="@font/mulish_bold"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:letterSpacing="0.01"
                    android:textColor="#323F4B"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rendah"
                    android:layout_marginTop="13dp"
                    android:layout_marginStart="24sp"
                    android:fontFamily="@font/mulish_bold"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:letterSpacing="0.01"
                    android:textColor="#F2A000"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="24sp"
                    android:layout_marginTop="21dp"
                    android:background="@drawable/line_6"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"
                    android:layout_marginTop="23dp"
                    android:layout_marginStart="16sp"
                    android:fontFamily="@font/mulish_bold"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:letterSpacing="0.01"
                    android:textColor="#323F4B"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_photo_perbaikan"
                    android:layout_marginTop="13dp"
                    android:layout_marginStart="24sp"
                    android:fontFamily="@font/mulish"
                    android:textStyle="normal"
                    android:textSize="14sp"
                    android:letterSpacing="0.01"
                    android:textColor="#323F4B"
                    />
                <ImageView
                    android:layout_width="350dp"
                    android:layout_height="200dp"
                    android:minWidth="200dp"
                    android:minHeight="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="24sp"
                    android:background="@drawable/click"/>



        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="24dp"
                    android:background="@drawable/button_red"
                    android:gravity="center"
                    android:text="@string/komplain"
                    android:textColor="@color/white"

                    tools:ignore="TextContrastCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="24dp"
                    android:background="@drawable/button_green"
                    android:gravity="center"
                    android:text="@string/terima"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />
        </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>